; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_proc.c_proc_readdir.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_proc.c_proc_readdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.dir_entry = type { i64, i32 }
%struct.proc_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fd*, %struct.dir_entry*)* @proc_readdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_readdir(%struct.fd* %0, %struct.dir_entry* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fd*, align 8
  %5 = alloca %struct.dir_entry*, align 8
  %6 = alloca %struct.proc_entry, align 4
  %7 = alloca i32, align 4
  store %struct.fd* %0, %struct.fd** %4, align 8
  store %struct.dir_entry* %1, %struct.dir_entry** %5, align 8
  %8 = load %struct.fd*, %struct.fd** %4, align 8
  %9 = getelementptr inbounds %struct.fd, %struct.fd* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.fd*, %struct.fd** %4, align 8
  %12 = getelementptr inbounds %struct.fd, %struct.fd* %11, i32 0, i32 0
  %13 = call i32 @proc_dir_read(i32* %10, i32* %12, %struct.proc_entry* %6)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

17:                                               ; preds = %2
  %18 = load %struct.dir_entry*, %struct.dir_entry** %5, align 8
  %19 = getelementptr inbounds %struct.dir_entry, %struct.dir_entry* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @proc_entry_getname(%struct.proc_entry* %6, i32 %20)
  %22 = load %struct.dir_entry*, %struct.dir_entry** %5, align 8
  %23 = getelementptr inbounds %struct.dir_entry, %struct.dir_entry* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %17, %16
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @proc_dir_read(i32*, i32*, %struct.proc_entry*) #1

declare dso_local i32 @proc_entry_getname(%struct.proc_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
